objects/Global_Business_Forum__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Business_Unit__c</fullName>
        <label>Additional Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>PPS Computing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPS Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPSD Storage</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Country_Coverage_Description__c</fullName>
        <label>Country Coverage Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country_Coverage_Standard_Element__c</fullName>
        <label>Country Coverage Standard Element</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Organization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Organization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Details_of_any_existing_contract__c</fullName>
        <label>Details of any existing contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_Business_Description__c</fullName>
        <label>E Business Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>E_Business_Standard_Element__c</fullName>
        <label>E Business Standard Element</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Contract_Start_Date__c</fullName>
        <label>Estimated Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exec_Sponsor_engaged_name_if_present__c</fullName>
        <label>Exec Sponsor engaged name if present</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_SLO_Description__c</fullName>
        <label>Expected SLO Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expected_SLO_Standard_Element__c</fullName>
        <label>Expected SLO Standard Element</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Factory_Custom_Integration_Services__c</fullName>
        <label>Factory &amp; Custom Integration Services</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Factory_Services_description__c</fullName>
        <label>Factory Services Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Factory_Services_standard_Element__c</fullName>
        <label>Factory Services standard Element</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Global_Customer_Segment__c</fullName>
        <label>Global Customer Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Focus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Focus Indirect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard / Non Focus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Global_Opportunity_Description__c</fullName>
        <label>Global Opportunity Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Global_Product_Offering__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Global Product Offering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HP_Credit_received_Description__c</fullName>
        <label>HP Credit received Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HP_Credit_received_Standard_Element__c</fullName>
        <label>HP Credit received Standard Element</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HP_Share_of_Customer_HW_Spend__c</fullName>
        <label>HP Share of Customer HW Spend</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HQ_Country_per_Region__c</fullName>
        <label>HQ Country per Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Business_Unit__c</fullName>
        <label>Lead Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>PPS Computing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPS Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Region__c</fullName>
        <label>Lead Region</label>
        <picklist>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Liquidated_Damages_Penalties__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Liquidated Damages/Penalties</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Presented_as__c</fullName>
        <label>Opportunity Presented as</label>
        <picklist>
            <picklistValues>
                <fullName>RFP Solicited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFI Solicited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP Unsolicited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFI Unsolicited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Global_Volume_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_in_Forecast_or_Not__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity in Forecast or Not</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_e_g_cross__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other e.g. cross</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Penalties_Description__c</fullName>
        <label>Penalties Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Penalties_standard_element__c</fullName>
        <label>Penalties standard element</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Fulfillment_by_Region__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preferred Fulfillment  by Region</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Methodology_Description__c</fullName>
        <label>Pricing Methodology Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pricing_Methodology_standard_Element__c</fullName>
        <label>Pricing Methodology standard Element</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Standard_Element__c</fullName>
        <label>Product Standard Element</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_and_or_Global_Must_Win_deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Regional and / or Global Must Win deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solution_Offering__c</fullName>
        <label>Solution Offering</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TAT_SLAs_Description__c</fullName>
        <label>TAT SLAs Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TAT_SLAs_Standard_Element__c</fullName>
        <label>TAT SLAs Standard Element</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Length_In_Months__c</fullName>
        <label>Total Contract Length In Months</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Turnaround_Times__c</fullName>
        <label>Turnaround Times</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Services_Description__c</fullName>
        <label>Warranty Services Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Warranty_Services_Standard_Element__c</fullName>
        <label>Warranty Services Standard Element</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Warranty_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Warranty Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eBusiness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>eBusiness</label>
        <type>Checkbox</type>
    </fields>
    <label>Global Business Forum</label>
    <nameField>
        <label>Global Volume Forum Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Global Business Forum</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Custom_Solution_Offering_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
AND(Text(Country_Coverage_Standard_Element__c) = &quot;Yes&quot;,
Text(E_Business_Standard_Element__c) = &quot;Yes&quot;,
Text(Pricing_Methodology_standard_Element__c) = &quot;Yes&quot;,
Text(Expected_SLO_Standard_Element__c) = &quot;Yes&quot;,
Text(Factory_Services_standard_Element__c) = &quot;Yes&quot;,
Text(HP_Credit_received_Standard_Element__c) = &quot;Yes&quot;,
Text(Penalties_standard_element__c) = &quot;Yes&quot;,
Text(Product_Standard_Element__c) = &quot;Yes&quot;,
Text(TAT_SLAs_Standard_Element__c) = &quot;Yes&quot;,
Text(Warranty_Services_Standard_Element__c) = &quot;Yes&quot;)
,
Text(Solution_Offering__c) = &quot;Custom&quot;)</errorConditionFormula>
        <errorMessage>Please select at least one category as custom</errorMessage>
    </validationRules>
</CustomObject>